--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="@string/dia_chi"
-        android:textColor="#000000"
+        style="@style/Text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.431"
@@ -38,7 +38,7 @@
         android:layout_height="2dp"
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView26"
         app:srcCompat="@drawable/ic_vienduoi" />
@@ -218,7 +218,7 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/add_dia"
                 android:fontFamily="@font/be_vietnam_medium"
-                android:textColor="#EC8383"
+                android:textColor="#ff1a1a"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
