--- a/app/src/main/res/layout/activity_confirm_otpactivity.xml
+++ b/app/src/main/res/layout/activity_confirm_otpactivity.xml
@@ -25,6 +25,7 @@
         android:layout_width="128dp"
         android:layout_height="89dp"
         android:layout_marginTop="16dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/imghelloscreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -71,6 +72,7 @@
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/bg_btn"
+        android:fontFamily="@font/be_vietnam_bold"
         android:onClick="onCLickCheckOtp"
         android:text="Tiếp Tục"
         android:textColor="#EFEEEE"
@@ -82,12 +84,13 @@
 
     <TextView
         android:id="@+id/tvguilaima"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Gửi lại mã"
-        style="@style/Text"
         android:allowClickWhenDisabled="true"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:text="Gửi lại mã"
         android:textColor="#780A0A"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
