--- a/app/src/main/res/layout/activity_login_fa_go.xml
+++ b/app/src/main/res/layout/activity_login_fa_go.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_marginTop="10dp"
+        android:scaleType="center"
         android:src="@drawable/imghelloscreen"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,9 +115,10 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/bg_btn"
+        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
-        android:text="@string/ng_nh_p"
         android:onClick="loginDangNhap"
+        android:text="@string/ng_nh_p"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -134,6 +136,7 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.413"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
