--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,9 +128,10 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="45dp"
         android:background="@drawable/bg_btn"
+        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
-        android:text="@string/ng_k"
         android:onClick="onClickRegister"
+        android:text="@string/ng_k"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -158,12 +159,12 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="15dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="@string/da_co_tai_khoan_chua"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:fontFamily="@font/be_vietnam_medium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.411"
+        app:layout_constraintHorizontal_bias="0.351"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />
