--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -27,7 +27,7 @@
         android:layout_height="89dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-
+        android:scaleType="centerCrop"
         android:src="@drawable/imghelloscreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.46"
@@ -78,6 +78,7 @@
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/bg_btn"
+        android:fontFamily="@font/be_vietnam_bold"
         android:gravity="center"
         android:onClick="onCLickChangepass"
         android:text="@string/l_u"
