--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         android:background="#F9514F"
         android:gravity="center_horizontal"
-        android:text="Giỏi Hàng"
+        android:text="Giỏ Hàng"
         android:fontFamily="@font/be_vietnam_bold"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -34,7 +34,7 @@
         app:mode="same_level">
 
         <FrameLayout
-            android:layout_width="65dp"
+            android:layout_width="70dp"
             android:layout_marginLeft="5dp"
             android:layout_height="match_parent">
 
@@ -45,15 +45,11 @@
                 android:backgroundTint="#ff0000"
                 app:cardCornerRadius="6dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ImageView
                     android:layout_gravity="center"
-                    android:layout_marginHorizontal="5dp"
-                    android:fontFamily="@font/be_vietnam_medium"
-                    android:textColor="@color/white"
-                    android:text="Delete"
-                    android:textSize="16sp" />
+                    android:layout_width="35dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/ic_delete_sp"/>
 
             </androidx.cardview.widget.CardView>
         </FrameLayout>
