--- a/app/src/main/res/layout/item_cart_products.xml
+++ b/app/src/main/res/layout/item_cart_products.xml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.apachat.swipereveallayout.core.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:dragEdge="right"
+    app:mode="same_level"
     android:background="@drawable/bg_borders_sp"
     android:layout_width="match_parent"
     android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
     android:layout_height="125dp">
+
+    <FrameLayout
+        android:layout_width="70dp"
+        android:layout_marginLeft="5dp"
+        android:layout_height="match_parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginLeft="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="125dp"
+            android:backgroundTint="#ff0000"
+            app:cardCornerRadius="6dp">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="35dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_delete_sp"/>
+
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginRight="10dp"
+        android:background="@drawable/bg_borders_sp"
+        android:layout_width="match_parent"
+        android:layout_height="125dp">
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView6"
@@ -90,4 +119,5 @@
             android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.apachat.swipereveallayout.core.SwipeLayout>
