--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -71,7 +71,7 @@
         android:id="@+id/cl_insertAdsress"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#FEFEFE"
+        android:background="@drawable/bg_borders_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rcl_address">
@@ -96,6 +96,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/be_vietnam_medium"
             android:text="@string/add_dia"
+            style="@style/Text"
             android:textColor="#ff1a1a"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,10 +107,10 @@
         <ImageView
             android:layout_width="7dp"
             android:layout_height="17dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="28dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView17"
             app:srcCompat="@drawable/ic_back_arrow" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
