--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="10dp"
             android:text="Nhà"
 
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,14 +34,15 @@
         <TextView
             android:id="@+id/tv_address"
             android:layout_width="0dp"
-            android:ellipsize="end"
-            android:maxLines="1"
             android:layout_height="25dp"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Trường Cao Đẳng FPT Polytechnic,Trịnh Văn Bô,"
-            android:textColor="#B6ADAD"
+            android:textColor="#333232"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView30"
@@ -55,9 +56,9 @@
             android:layout_width="7dp"
             android:layout_height="17dp"
             android:layout_marginEnd="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_address"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_name_address"
             app:layout_constraintVertical_bias="0.511"
             app:srcCompat="@drawable/ic_back_arrow" />
 
@@ -65,8 +66,8 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
