--- a/app/src/main/res/layout/item_cart_products.xml
+++ b/app/src/main/res/layout/item_cart_products.xml
@@ -10,6 +10,7 @@
     android:layout_height="125dp">
 
     <FrameLayout
+        android:id="@+id/delete"
         android:layout_width="70dp"
         android:layout_marginLeft="5dp"
         android:layout_height="match_parent">
@@ -33,7 +34,8 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/bg_borders_sp"
         android:layout_width="match_parent"
-        android:layout_height="125dp">
+        android:layout_height="125dp"
+        android:id="@+id/constraint">
 
 
         <androidx.cardview.widget.CardView
@@ -41,13 +43,13 @@
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_margin="7dp"
-            android:src="@drawable/img_sp"
             app:cardCornerRadius="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/imgsp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
@@ -55,7 +57,7 @@
         </androidx.cardview.widget.CardView>
         <TextView
             android:fontFamily="@font/be_vietnam_medium"
-            android:id="@+id/textView19"
+            android:id="@+id/tvname"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
@@ -74,22 +76,22 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/cardView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView19">
+            app:layout_constraintTop_toBottomOf="@+id/tvname">
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/tvsoluong"
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="1"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView10"
-                app:layout_constraintStart_toEndOf="@+id/imageView7"
+                app:layout_constraintEnd_toStartOf="@+id/imgcong"
+                app:layout_constraintStart_toEndOf="@+id/imgtru"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView10"
+                android:id="@+id/imgcong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/explore_cong"
@@ -98,7 +100,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/imgtru"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/explore_tru"
@@ -109,7 +111,7 @@
 
         <TextView
             android:fontFamily="@font/be_vietnam_medium"
-            android:id="@+id/textView20"
+            android:id="@+id/tvprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
