--- a/app/src/main/res/drawable/favorite_item.xml
+++ b/app/src/main/res/drawable/favorite_item.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:drawable="@drawable/ic_favorite_active" android:state_checked="true"/>
-  <item android:drawable="@drawable/ic_favorite"/>
+  <item android:drawable="@drawable/ic_baseline_favorite_border_24"/>
 </selector>
