--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -80,9 +80,13 @@
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập số điện thoại"
         android:paddingLeft="25dp"
+        android:maxLines="1"
+        android:textColor="@color/black"
+    android:enabled="false"
         android:fontFamily="@font/be_vietnam_medium"
         android:paddingRight="15dp"
         android:textSize="16sp"
+        android:lines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,9 +101,13 @@
         android:background="@drawable/bg_borders_edit"
         android:drawableRight="@drawable/ic_pen"
         android:hint="DD/MM/YY"
+        android:textColor="@color/black"
         android:fontFamily="@font/be_vietnam_medium"
         android:paddingLeft="25dp"
         android:paddingRight="15dp"
+        android:enabled="false"
+        android:maxLines="1"
+        android:lines="1"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -116,8 +124,12 @@
         android:drawableRight="@drawable/ic_pen"
         android:hint="Nhập tên"
         style="@style/Text"
+        android:enabled="false"
         android:paddingLeft="25dp"
         android:paddingRight="15dp"
+        android:maxLines="1"
+        android:lines="1"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -178,7 +190,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextdate"
         app:layout_constraintVertical_bias="0.5" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline15"
         android:layout_width="wrap_content"
