--- a/app/src/main/res/layout/item_tai_khoan.xml
+++ b/app/src/main/res/layout/item_tai_khoan.xml
@@ -26,7 +26,7 @@
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/img_accout" />
+            android:src="@drawable/imageavt" />
     </androidx.cardview.widget.CardView>
 
     <TextView
